--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,9 @@ body {
       "controls world world"
       "controls world world";
   
-    grid-template-columns: 200px 1fr 200px;
+    grid-template-columns: 0.23fr 1fr 200px;
     grid-template-rows: 0.2fr 1fr auto;
-    grid-gap: 10px;
+    grid-gap: 1px;
   
     height: 100vh;
     width: 100vw;
@@ -20,17 +20,30 @@ body {
 
 header {
     text-align: center;
+    font-family: 'Yomogi', cursive;
     grid-area: header;
     background-color:rgb(70, 25, 25);
     color: white;
     border-radius: 5px;
+    padding: 20px;
+}
+
+h1 {
+    transition: font-size 2s;
+}
+
+h1:hover {
+    font-size: 5rem;
 }
   
 nav {
     grid-area: controls;
+    font-family: 'Yomogi', cursive;
+    color: white;
     margin-left: 0.5rem;
-    background-color:teal;
+    background-color:rgb(90, 55, 55);
     border-radius: 5px;
+    padding: 10px;
 }
   
 main {
@@ -41,4 +54,17 @@ main {
     border-radius: 5px;
     border: solid black 3px;
 }
-  
+
+h3 {
+    text-align: center;
+}
+
+.form-label {
+    font-size: large;
+}
+
+.form-range {
+    margin-left: 5%;
+    margin-right: 5%;
+    max-width: 80%;
+}
