--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
       "controls world world"
       "controls world world";
   
-    grid-template-columns: 0.23fr 1fr 200px;
+    grid-template-columns: 0.35fr 1fr 1fr;
     grid-template-rows: 0.2fr 1fr auto;
     grid-gap: 1px;
   
@@ -45,6 +45,10 @@ nav {
     border-radius: 5px;
     padding: 10px;
 }
+
+nav p {
+    text-align: center;
+}
   
 main {
     grid-area: world;
@@ -57,6 +61,19 @@ main {
 
 h3 {
     text-align: center;
+    transition: font-size 2s;
+}
+
+h3:hover {
+    font-size: 2.8rem;
+}
+
+h4 {
+    transition: font-size 2s;
+}
+
+h4:hover {
+    font-size: 2rem;
 }
 
 .form-label {
